Removed enough stuff to at least get it building