@@ -11,14 +11,11 @@ import net.minecraft.screen.ScreenHandler;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 
 public class InventoryHelper {
   public static void sortInventory(PlayerEntity player, boolean isPlayerInventory) {
     Inventory containerInventory = getContainerInventory(player);
-    Inventory inventory = isPlayerInventory || containerInventory == null
-        ? player.getInventory()
-        : containerInventory;
+    Inventory inventory = isPlayerInventory || containerInventory == null ? player.getInventory() : containerInventory;
 
     if (inventory instanceof PlayerInventory) {
       sortInventory(inventory, SlotRange.playerMainRange());
@@ -45,14 +42,14 @@ public class InventoryHelper {
     List<ItemStack> cleanedStacks = stacks.stream()
         .filter(itemStack -> !itemStack.isEmpty())
         .map(ItemStack::copy)
-        .collect(Collectors.toList());
+        .toList();
 
     for (int i = 0; i < cleanedStacks.size(); i++) {
       for (int j = i + 1; j < cleanedStacks.size(); j++) {
         ItemStack a = cleanedStacks.get(i);
         ItemStack b = cleanedStacks.get(j);
 
-        if (areItemStacksMergeable(a, b)) {
+        if (canStacksBeMerged(a, b)) {
           int itemsToShift = Math.min(a.getMaxCount() - a.getCount(), b.getCount());
           if (itemsToShift > 0) {
             a.increment(itemsToShift);
@@ -65,7 +62,7 @@ public class InventoryHelper {
     List<ItemStack> sortedStacks = cleanedStacks.stream()
         .filter(itemStack -> !itemStack.isEmpty())
         .sorted(ItemStackComparator.comparator())
-        .collect(Collectors.toList());
+        .toList();
 
     for (int i = slotRange.min; i < slotRange.max; i++) {
       int j = i - slotRange.min;
@@ -105,37 +102,26 @@ public class InventoryHelper {
     }
 
     if (fromPlayerInventory) {
-      transferEntireInventory(playerInventory,
-          containerInventory,
-          playerSlotRange,
-          containerSlotRange,
-          player.playerScreenHandler,
-          player.currentScreenHandler,
-          player);
+      transferEntireInventory(playerInventory, containerInventory, playerSlotRange, containerSlotRange,
+          player.playerScreenHandler, player.currentScreenHandler, player
+      );
     } else {
-      transferEntireInventory(containerInventory,
-          playerInventory,
-          containerSlotRange,
-          playerSlotRange,
-          player.currentScreenHandler,
-          player.playerScreenHandler,
-          player);
+      transferEntireInventory(containerInventory, playerInventory, containerSlotRange, playerSlotRange,
+          player.currentScreenHandler, player.playerScreenHandler, player
+      );
     }
   }
 
   private static void autoStackInventories(
-      Inventory from, Inventory to, PlayerEntity player) {
+      Inventory from, Inventory to, PlayerEntity player
+  ) {
     autoStackInventories(from, to, SlotRange.fullRange(from), SlotRange.fullRange(to), player);
   }
 
   private static void autoStackInventories(
-      Inventory from, Inventory to, SlotRange fromRange, SlotRange toRange, PlayerEntity player) {
-    transferEntireInventory(from,
-        to,
-        fromRange,
-        toRange,
-        (fromStack, toStack) -> !toStack.isEmpty(),
-        player);
+      Inventory from, Inventory to, SlotRange fromRange, SlotRange toRange, PlayerEntity player
+  ) {
+    transferEntireInventory(from, to, fromRange, toRange, (fromStack, toStack) -> !toStack.isEmpty(), player);
   }
 
   private static void transferEntireInventory(
@@ -144,7 +130,8 @@ public class InventoryHelper {
       SlotRange fromRange,
       SlotRange toRange,
       BiFunction<ItemStack, ItemStack, Boolean> predicate,
-      PlayerEntity player) {
+      PlayerEntity player
+  ) {
     transferEntireInventory(from, to, fromRange, toRange, predicate, null, null, player);
   }
 
@@ -155,15 +142,11 @@ public class InventoryHelper {
       SlotRange toRange,
       ScreenHandler fromScreenHandler,
       ScreenHandler toScreenHandler,
-      PlayerEntity player) {
-    transferEntireInventory(from,
-        to,
-        fromRange,
-        toRange,
-        (fromStack, toStack) -> true,
-        fromScreenHandler,
-        toScreenHandler,
-        player);
+      PlayerEntity player
+  ) {
+    transferEntireInventory(from, to, fromRange, toRange, (fromStack, toStack) -> true, fromScreenHandler,
+        toScreenHandler, player
+    );
   }
 
   private static void transferEntireInventory(
@@ -174,7 +157,8 @@ public class InventoryHelper {
       BiFunction<ItemStack, ItemStack, Boolean> predicate,
       ScreenHandler fromScreenHandler,
       ScreenHandler toScreenHandler,
-      PlayerEntity player) {
+      PlayerEntity player
+  ) {
     for (int toIdx = toRange.min; toIdx < toRange.max; toIdx++) {
       for (int fromIdx = fromRange.min; fromIdx < fromRange.max; fromIdx++) {
         ItemStack fromStack = from.getStack(fromIdx).copy();
@@ -196,7 +180,7 @@ public class InventoryHelper {
           continue;
         }
 
-        if (areItemStacksMergeable(toStack, fromStack)) {
+        if (canStacksBeMerged(toStack, fromStack)) {
           int space = toStack.getMaxCount() - toStack.getCount();
           int amount = Math.min(space, fromStack.getCount());
           if (amount > 0) {
@@ -214,8 +198,7 @@ public class InventoryHelper {
     }
   }
 
-  private static boolean canTakeItemFromSlot(
-      ScreenHandler screenHandler, int idx, PlayerEntity player) {
+  private static boolean canTakeItemFromSlot(ScreenHandler screenHandler, int idx, PlayerEntity player) {
     if (screenHandler == null) {
       return true;
     }
@@ -226,8 +209,7 @@ public class InventoryHelper {
     }
   }
 
-  private static boolean canPlaceItemInSlot(
-      ScreenHandler screenHandler, int idx, ItemStack itemStack) {
+  private static boolean canPlaceItemInSlot(ScreenHandler screenHandler, int idx, ItemStack itemStack) {
     if (screenHandler == null) {
       return true;
     }
@@ -251,8 +233,9 @@ public class InventoryHelper {
     }
   }
 
-  public static boolean areItemStacksMergeable(ItemStack a, ItemStack b) {
-    return !a.isEmpty() && !b.isEmpty() && ItemStack.canCombine(a, b);
+  public static boolean canStacksBeMerged(ItemStack a, ItemStack b) {
+    return !a.isEmpty() && ItemStack.areItemsAndComponentsEqual(a, b) && a.isStackable() &&
+        a.getCount() < a.getMaxCount();
   }
 
   static class SlotRange {
